--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "material-ui-icons": "^1.0.0-beta.36",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
     "react-scripts": "3.4.3",
+    "redux": "^4.0.5",
     "typescript": "^3.9.7"
   },
   "scripts": {
